@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-13711.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-13808.tgz',
      'xapian-core.tgz',
-     'b8f4db7e59a6b333452a774608e6e4285b318a8b',
+    '0191b276206c473ac0ccad22bfb7c2b287b27a81',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-13711.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-13808.tgz',
      'xapian-bindings.tgz',
-     '2787c3329def41188bcca2e674cdee97255c1b5c',
+     'e341a98169c0b4021ad6b2464b60d56cd41ff9c6',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-13711.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-13808.tgz',
      'win32msvc.tgz',
-     '0ad43504998f609ac087fad284d9e0fb339c57f6',
+     '424d074b89afc2737e52b6389897514257df6618',
      'xapian-core/win32',
     ),
     ('Xapian extras',
